--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html>
-
 	<head>
 		<title>
 			hoverMobile Library: Simulate the hover event in mobile
@@ -10,29 +10,13 @@
 			This library simulates the hover effect on mobile devices, width a cursor ( arrow ). By moving the arrow to the specified element, you can see the effect. 
 			@ Gabriel Conceição | gabriel_7340@hotmail.com | www.gabrielconceicao.com 
 		-->
+		<script src="go.js"></script>
 		<script src="hoverMobile.js"></script>
 	</head>
 
 	<body>
-		<img class="pointer" src="pointer.png">
-		<div class="log"></div>
-
 		<button class="pickme">pick me!</button>
 		<style>
-			body{
-				touch-action: none !important;
-				-moz-user-select: none !important;
-				-ms-user-select: none !important;
-				-o-user-select: none !important;
-				-webkit-user-select: none !important;
-				user-select: none !important;
-			}
-			.pointer{
-				width: 20px;
-				
-				position: absolute;
-				z-index: 999999999999999;
-			}
 			button:hover{
 				background-color: red;
 			}
@@ -40,13 +24,25 @@
 				background-color: red;
 			}
 			button{
-				width: 100px;
+				width: 150px;
 				height: 100px;
 			}
 		</style>
 
-		<script>
-				hoverMobile.start();
+		<script type="text/javascript">
+				gO.ready( function(){
+					hoverMobile.start({
+						pointerEl: '.pointer',	
+						hideAfterTouch: true,
+						showPointer: true,
+						pointerOffsetX: 20,
+						pointerOffsetY: 40,		
+						delayPointer: 200,			
+						fireHoverEvent: true,
+						applyHoverCssEffect: true,	
+						hoverClassName: 'hover',
+					});
+				});
 		</script>
 	</body>
 </html>
