--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 
 	<head>
 		<title>
-			hoverMobile Library: Simulate the hover event on mobile devices
+			hoverMobile Library: Simulate the hover event in mobile
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- 
 			This library simulates the hover effect on mobile devices, width a cursor ( arrow ). By moving the arrow to the specified element, you can see the effect. 
-			@ Gabriel Conceição | gabriel_7340@hotmail.com | www.gabrielconceicao.com
-			https://github.com/gabrielpconceicao/hoverMobile
+			@ Gabriel Conceição | gabriel_7340@hotmail.com | www.gabrielconceicao.com 
 		-->
 		<script src="go.js"></script>
 		<script src="hoverMobile.js"></script>
 	</head>
 
 	<body>
-		<p> Press the lcd screen three times to show the pointer and pick the button! </p>
-		<button> Pick me! </button>
+		<p> Press the lcd screen three times to show the pointer and catch the button! </p>
+		<button> Catch me! </button>
+		<p class="message"></p>
 		<style>
+			.message{
+				color: red;
+			}
 			button:hover{
 				background-color: red;
 			}
@@ -44,6 +47,13 @@
 					fireHoverEvent: true,
 					applyHoverCssEffect: true,	
 					hoverClassName: 'hover',
+				});
+
+				gO.el( 'button' ).on( 'touchenter', function(){
+					gO.el( '.message' ).val( 'You can see the effect without pressing the button.<br>This message has displayed with javascript event listeners!' );
+				});
+				gO.el( 'button' ).on( 'touchleave', function(){
+					gO.el( '.message' ).val( '' );
 				});
 			});
 		</script>
