Update implementation example

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
+<!DOCTYPE html>
 <html>
-
 	<head>
 		<title>
-			hoverMobile Library: Simulate the hover event in mobile
+			hoverMobile Library: Simulate the hover event on a mobile device
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
