--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<title>
 			hoverMobile Library: Simulate the hover event on a mobile device
@@ -9,6 +10,8 @@
 		<!-- 
 			This library simulates the hover effect on mobile devices, width a cursor ( arrow ). By moving the arrow to the specified element, you can see the effect. 
 			@ Gabriel Conceição | gabriel_7340@hotmail.com | www.gabrielconceicao.com 
+
+			https://github.com/gabrielpconceicao/hoverMobile
 		-->
 		<script src="go.js"></script>
 		<script src="hoverMobile.js"></script>
@@ -19,6 +22,9 @@
 		<button> Catch me! </button>
 		<p class="message"></p>
 		<style>
+			html, body {
+  				height: 100%;
+			}
 			.message{
 				color: red;
 			}
